Refactor state management to ensure proper turn validation and error handling across combat zones and game phases